WISH: load system-wide config file even if we don't have one
WISH: look into XAddConnectionWatch, does anybody need that?
DUMB: support tex fonts
TODO: decrqm http://ue.tst.eu/71d7dbd1fcfeaa7d2a4b96eb957d570c.txt
TODO: perl-shell-window? perl-unix-socket?
TODO: command line editing when icanon?

TODO: resources section in manual talks bullshit about system-wide app-defaults file
        - gdk-pixbuf is autodetected by default and preferred over libafterimage.
        - do not prepend a newline to the selection text when the starting line
          of the selection is not highlighted (Emanuele Giaquinta).
	- don't swap perl env with real env, save and restore it, just in case
          we ever get recursive perl invocations. also saves a bit of codespace
          with gcc.
        - fix various memory leaks (Emanuele Giaquinta).
        - fix debian bug #504817, to the extent possible.
	- try to detect byte order at compile time, seems to work around weird linking
          errors on freebsd (seems to have trouble with static member variables) - also
          saves a couple of hundred bytes, if your compiler is smart enough.
        - add support for previewing the pasted data in confirm-paste
          (Emanuele Giaquinta).
        - added "newlines to spaces" option in selection-popup.
        - actually enabled solaris event ports backends (was disabled by accident).
        - revert to 38400 baud max., mission accomplished.

9.10 Mon Dec 13 17:43:52 CET 2010
	- the "schmorp=north korea dickey=south korea" release.
        - INCOMPATIBLE CHANGE: make OSC 20 simpler and more correct
          (Emanuele Giaquinta).
	- if options were compiled out, this could lead to the option
          count to be defined wrongly. This is likely behind the
          failures with gcc 4.5.
        - explicitly depend on fontconfig and xrender when xft support
          is enabled. Although the public Xft api uses types from
          both, in Xft 2.2.0 these libs are private